external-crates/move/crates/move-compiler/tests/move_check/expansion/use_spec_function.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/expansion/use_spec_function.move:3:5
  │
3 │     spec module {
  │     ^^^^
  │     │
  │     Unexpected 'spec'
  │     Expected a module member: 'use', 'friend', 'const', 'fun', or 'struct'

error[E01002]: unexpected token
  ┌─ tests/move_check/expansion/use_spec_function.move:3:17
  │
3 │     spec module {
  │                 ^
  │                 │
  │                 Unexpected '{'
  │                 Expected an address or an identifier

error[E02004]: invalid 'module' declaration
  ┌─ tests/move_check/expansion/use_spec_function.move:9:8
  │
9 │ module M {
  │        ^ Invalid module declaration. The module does not have a specified address. Either declare it inside of an 'address <address> {' block or declare it with an address 'module <address>::M''

error[E03002]: unbound module
   ┌─ tests/move_check/expansion/use_spec_function.move:10:9
   │
10 │     use 0x2::X::{foo, bar as baz};
   │         ^^^^^^ Invalid 'use'. Unbound module: '0x2::X'

error[E01002]: unexpected token
   ┌─ tests/move_check/expansion/use_spec_function.move:14:5
   │
14 │     spec t {
   │     ^^^^
   │     │
   │     Unexpected 'spec'
   │     Expected a module member: 'use', 'friend', 'const', 'fun', or 'struct'

